--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  background-color: rgb(201, 186, 165);
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,49 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  text-align: center;
+  text-shadow: 1px 1px 1px;
+  border-bottom: 1px solid black;
+}
+
+img {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  box-shadow: 2px 2px 5px;
+  border-radius: 4px;
+}
+
+.movie-section {
+  margin: auto;
+  width: 80%;
+  padding: 6px;
+  background-color: antiquewhite;
+  border-radius: 5px;
+  box-shadow: 4px 4px 10px;
+  margin-bottom: 10px; 
+}
+
+textarea {
+  resize: none;
+}
+
+.review-box {
+  height: 200px;
+}
+
+.star-button {
+  font-size: 40px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.on {
+  color: #000;
+}
+.off {
+  color: #ccc;
 }
